--- a/MasterLinux_CoffeeLeaves_Assignment.ipynb
+++ b/MasterLinux_CoffeeLeaves_Assignment.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a0032a1f",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "62444693",
    "metadata": {},
    "outputs": [
@@ -362,10 +362,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1b88fb271f0>"
+       "<matplotlib.image.AxesImage at 0x1bc62bde400>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e6bc4c27",
    "metadata": {},
    "outputs": [
@@ -1684,8 +1684,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8d044e80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### load models ####\n",
+    "healthy_unhealthy_model = tf.keras.models.load_model('ResNet50V2_healthy_unhealthy')\n",
+    "severity_model = tf.keras.models.load_model('ResNet50v2_severity')\n",
+    "stresses_model = tf.keras.models.load_model('ResNet50_stresses_unhealthy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0d01698e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "healthy_unhealthy_predicted = np.round(healthy_unhealthy_model.predict(imgs_np/255, batch_size = 16))\n",
+    "stresses_predicted = np.round(severity_model.predict(imgs_np/255, batch_size = 16))\n",
+    "severity_predicted = np.argmax(stresses_model.predict(imgs_np/255, batch_size = 16), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "67cfdb89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### make predicted healthy leaves have all other predictions as zero #####\n",
+    "stresses_predicted_masked = np.multiply(healthy_unhealthy_predicted,stresses_predicted)\n",
+    "severity_predicted_masked = np.multiply(healthy_unhealthy_predicted,severity_predicted.reshape(-1,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b565adc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_pred_df = pd.DataFrame()\n",
+    "all_pred_df['id'] = arabica_dataset.index\n",
+    "healthy_unhealthy_df = pd.DataFrame(healthy_unhealthy_predicted, columns = ['healthy']).astype(int)\n",
+    "stresses_predicted_df = pd.DataFrame(stresses_predicted, columns = stresses_targets).astype(int)\n",
+    "severity_predicted_df = pd.DataFrame(severity_predicted, columns = ['severity']).astype(int)\n",
+    "all_pred_df = pd.concat([all_pred_df,healthy_unhealthy_df,stresses_predicted_df,severity_predicted_df], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c5f40078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_pred_df.to_csv('predictions.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b8f04c4",
    "metadata": {},
    "outputs": [],
    "source": []
